fixed selext video function and disabl;e fixed selectvideo 2

--- a/week4/index.html
+++ b/week4/index.html
@@ -8,25 +8,25 @@
  <body>
    <main>
      <h1 id="title">My Video Library</h1>
-     <section> <div>
+     <section>
  <!-- <p>
  Want to go wacky mode? <input type="text" id="wackyMode"><button onclick="goWackyMode()">Submit</button>
      <p id="wronganswer"></p>
  <p> -->
 
-<p>
-  <h3>What are feeling today?</h3>
+<p><h3>What are feeling today?</h3>
 <select name="video" id="video-select">
-  <option value="funny">Staten Island</option>
-  <option value="mystery">Mystery</option>
-  <option value="pets">Animals</option>
-  <option value="jake">Jake</option>
+<option value="funny">Staten Island</option>
+<option value="mystery">Mystery</option>
+<option value="pets">Animals</option>
+<option value="jake">Jake</option>
 </select>
 <button onclick="selectVideo()">Select</button>
 <h3> Not sure pick a number 1-4</h3>
 Number: <input type="number" id="valueText">
-<button onclick="selectVideo2()">Select</button>
+<button onclick="selectVideo()">Select</button>
 </p>
+
        <div class="player">
          <video controls loop>
            <source src="videos/adv.mp4" type="video/mp4">
