--- a/assign1/assign.html
+++ b/assign1/assign.html
@@ -11,5 +11,5 @@
 
       <h1>Dynamic Site</h1>
         <p>This is my Dynamic Site <a href="https://www.spotify.com/us/">opte</a></p>
-        <p>It's a dynamic website because it's pulling requests, it allows you to login and create an accounts which requires a databases to pull and save this info </p>
+        <p>It's a dynamic website because it's pulling requests, it allows you to login and create an accounts which requires a databases to pull and save this info. Also the reccomendations in music is always changing depending on what you like and what is trending. </p>
 </body>
